fixed the about us text colour on dark mode

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -448,6 +448,21 @@ body.dark-mode .top-nav {
     border-bottom: 1px solid #fff;
 }
 
+/* aboutus txt colour change */
+
+body.dark-mode .about-card {
+    color: #ffffff;
+}
+
+body.dark-mode .about-card p,
+body.dark-mode .about-card .intro-text,
+body.dark-mode .about-card li,
+body.dark-mode .about-card h3,
+body.dark-mode .about-header h1 {
+    color: #ffffff !important;
+}
+
+
 /* ==========================================================
    ICON TOGGLING
    ========================================================== */
